--- a/config/database.yml
+++ b/config/database.yml
@@ -3,6 +3,9 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
+
+ruby '2.1.1'
+
 development:
   adapter: sqlite3
   database: db/development.sqlite3
@@ -19,7 +22,8 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding : unicode
+  database: trip_builder
   pool: 5
   timeout: 5000
